Fixed label background flickering when tapped on mobile webkit-based browsers.

--- a/components/01-atoms/label/label.scss
+++ b/components/01-atoms/label/label.scss
@@ -10,6 +10,7 @@
 
   display: block;
   margin-bottom: ct-spacing();
+  -webkit-tap-highlight-color: transparent;
 
   @include ct-typography('label-regular');
 
